err/django-mediagenerator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mediagenerator-1.12.egg-info'...
Listing './lib/python3.5/site-packages/mediagenerator'...
Listing './lib/python3.5/site-packages/mediagenerator/contrib'...
Listing './lib/python3.5/site-packages/mediagenerator/filters'...
Compiling './lib/python3.5/site-packages/mediagenerator/filters/closure.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/closure.py", line 31
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/coffeescript.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/coffeescript.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/handlebars.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/handlebars.py", line 78
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/less.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/less.py", line 167
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/filters/pyjslibs'...
Compiling './lib/python3.5/site-packages/mediagenerator/filters/sass.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/sass.py", line 90
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/uglifier.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/uglifier.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/yuicompressor.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/yuicompressor.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/generators'...
Listing './lib/python3.5/site-packages/mediagenerator/generators/bundles'...
Compiling './lib/python3.5/site-packages/mediagenerator/generators/bundles/bundles.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/generators/bundles/bundles.py", line 71
    print 'Generating %s with variation %r' % (bundle, variation)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/management'...
Listing './lib/python3.5/site-packages/mediagenerator/management/commands'...
Compiling './lib/python3.5/site-packages/mediagenerator/management/commands/importsassframeworks.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/management/commands/importsassframeworks.py", line 68
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/templates'...
Listing './lib/python3.5/site-packages/mediagenerator/templates/mediagenerator'...
Listing './lib/python3.5/site-packages/mediagenerator/templates/mediagenerator/manifest'...
Listing './lib/python3.5/site-packages/mediagenerator/templatetags'...
Compiling './lib/python3.5/site-packages/mediagenerator/utils.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/utils.py", line 140
    except (ImportError, ValueError), e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
